--- a/tmux.conf
+++ b/tmux.conf
@@ -43,7 +43,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 # set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
 
-run '~/.tmux/plugins/tpm/tpm'
+# installing resurrect and continuum plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+
 
 # set vi-mode
 set-window-option -g mode-keys vi
@@ -57,3 +60,8 @@ bind % split-window -h -c "#{pane_current_path}"
 
 unbind c
 bind c new-window -c "#{pane_current_path}"
+
+set -g @continuum-restore 'on'
+
+
+run '~/.tmux/plugins/tpm/tpm'
