changing <prefix> to Ctrl-Space; installing Continuum and setting it to open last saved by default

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,9 +1,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
-##unbind C-b
-##set -g prefix C-Space
-##bind C-Space send-prefix
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
 
 # Vim style pane selection
 bind h select-pane -L
@@ -33,7 +33,7 @@ bind -n S-Right next-window
 bind -n M-H previous-window
 bind -n M-L next-window
 
-set -g @catppuccin_flavour 'mocha'
+# set -g @catppuccin_flavour 'mocha'
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -42,10 +42,10 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 
 # set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
 
-
-# installing resurrect and continuum plugins
+#installing continuum plugin and its dependency resurrect plugin
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
 
 
 # set vi-mode
@@ -60,8 +60,6 @@ bind % split-window -h -c "#{pane_current_path}"
 
 unbind c
 bind c new-window -c "#{pane_current_path}"
-
-set -g @continuum-restore 'on'
 
 
 run '~/.tmux/plugins/tpm/tpm'
