--- a/tmux.conf
+++ b/tmux.conf
@@ -61,5 +61,8 @@ bind % split-window -h -c "#{pane_current_path}"
 unbind c
 bind c new-window -c "#{pane_current_path}"
 
+set -g allow-passthrough all
+set -ga update-environment TERM
+set -ga update-environment TERM_PROGRAM
 
 run '~/.tmux/plugins/tpm/tpm'
